--- a/src/main/webapp/elvish-composition-archive/index.html
+++ b/src/main/webapp/elvish-composition-archive/index.html
@@ -8,7 +8,7 @@
 
 <h1>Elvish Composition Archive</h1>
 
-<p>Version 0.1.6 - Nov 11, 2023</p>
+<p>Version 0.1.8 - Mar 4, 2024</p>
 
 <p>This web page and its content are a mirror of the <i>Elvish Composition Archive</i>: a collection of works in Tolkien’s Elvish languages, Quenya and Sindarin. Content is organized alphabetically by <a href="#authors">author</a>. If you want to get (or even host) your own copy of the archive, see the section on <a href="#licensing">mirrors, downloads and licensing</a>. If you want to contribute to the archive, see the section on <a href="#submissions">submissions</a>.</p>
 
@@ -28,6 +28,8 @@
 
 <ul>
 <li><a href="chaered/tengwa-abc.html">Tengwar ABC</a> (Quenya, 2023)</li>
+<li><a href="chaered/gloomy-march.html">Gloomy March</a> (Quenya, 2024)</li>
+<li><a href="chaered/ninya-masta.html">Ninya Masta</a> (Quenya, 2024)</li>
 </ul>
 
 <h3><a id="delle"></a>Delle</h3>
