--- a/src/main/webapp/intro-quenya/index.html
+++ b/src/main/webapp/intro-quenya/index.html
@@ -43,17 +43,17 @@
 <p>Here are some links to vocabulary drills on the Memrise platform. You may want to practice each set of drills before you go through the exercises in each chapter. To make typing answers easier, the Memrise drills omit all diereses (¨), so that they have <i>taure</i> rather than <i>taurë</i>. Long vowels are required, however like <i>síla</i> “is shining”.</p>
 
 <ul>
-<li><b>Chapter 1 Drills</b> - <a href="https://app.memrise.com/community/course/6329970/eldamo-intro-quenya-ch-1/">https://app.memrise.com/community/course/6329970/eldamo-intro-quenya-ch-1/</a></li>
-<li><b>Chapter 2 Drills</b> - <a href="https://app.memrise.com/community/course/6334816/eldamo-intro-quenya-ch-2/">https://app.memrise.com/community/course/6334816/eldamo-intro-quenya-ch-2/</a></li>
-<li><b>Chapter 3 Drills</b> - <a href="https://app.memrise.com/community/course/6340132/eldamo-intro-quenya-ch-3/">https://app.memrise.com/community/course/6340132/eldamo-intro-quenya-ch-3/</a></li>
-<li><b>Chapter 4 Drills</b> - <a href="https://app.memrise.com/community/course/6343426/eldamo-intro-quenya-ch-4/">https://app.memrise.com/community/course/6343426/eldamo-intro-quenya-ch-4/</a></li>
-<li><b>Chapter 5 Drills</b> - <a href="https://app.memrise.com/community/course/6350684/eldamo-intro-quenya-ch-5/">https://app.memrise.com/community/course/6350684/eldamo-intro-quenya-ch-5/</a></li>
-<li><b>Chapter 6 Drills</b> - <a href="https://app.memrise.com/community/course/6352203/eldamo-intro-quenya-ch-6/">https://app.memrise.com/community/course/6352203/eldamo-intro-quenya-ch-6/</a></li>
-<li><b>Chapter 7 Drills</b> - <a href="https://app.memrise.com/community/course/6353711/eldamo-intro-quenya-ch-7/">https://app.memrise.com/community/course/6353711/eldamo-intro-quenya-ch-7/</a></li>
-<li><b>Chapter 8 Drills</b> - <a href="https://app.memrise.com/community/course/6357574/eldamo-intro-quenya-ch-8/">https://app.memrise.com/community/course/6357574/eldamo-intro-quenya-ch-8/</a></li>
-<li><b>Chapter 9 Drills</b> - <a href="https://app.memrise.com/community/course/6358068/eldamo-intro-quenya-ch-9/">https://app.memrise.com/community/course/6358068/eldamo-intro-quenya-ch-9/</a></li>
-<li><b>Chapter 10 Drills</b> - <a href="https://app.memrise.com/community/course/6361771/eldamo-intro-quenya-ch-10/">https://app.memrise.com/community/course/6361771/eldamo-intro-quenya-ch-10/</a></li>
-<li><b>Chapter 11 Drills</b> - <a href="https://app.memrise.com/community/course/6366933/eldamo-intro-quenya-ch-11/">https://app.memrise.com/community/course/6366933/eldamo-intro-quenya-ch-11/</a></li>
+<li><b>Chapter 1 Drills</b> - <a href="https://community-courses.memrise.com/community/course/6329970/eldamo-intro-quenya-ch-1/">https://community-courses.memrise.com/community/course/6329970/eldamo-intro-quenya-ch-1/</a></li>
+<li><b>Chapter 2 Drills</b> - <a href="https://community-courses.memrise.com/community/course/6334816/eldamo-intro-quenya-ch-2/">https://community-courses.memrise.com/community/course/6334816/eldamo-intro-quenya-ch-2/</a></li>
+<li><b>Chapter 3 Drills</b> - <a href="https://community-courses.memrise.com/community/course/6340132/eldamo-intro-quenya-ch-3/">https://community-courses.memrise.com/community/course/6340132/eldamo-intro-quenya-ch-3/</a></li>
+<li><b>Chapter 4 Drills</b> - <a href="https://community-courses.memrise.com/community/course/6343426/eldamo-intro-quenya-ch-4/">https://community-courses.memrise.com/community/course/6343426/eldamo-intro-quenya-ch-4/</a></li>
+<li><b>Chapter 5 Drills</b> - <a href="https://community-courses.memrise.com/community/course/6350684/eldamo-intro-quenya-ch-5/">https://community-courses.memrise.com/community/course/6350684/eldamo-intro-quenya-ch-5/</a></li>
+<li><b>Chapter 6 Drills</b> - <a href="https://community-courses.memrise.com/community/course/6352203/eldamo-intro-quenya-ch-6/">https://community-courses.memrise.com/community/course/6352203/eldamo-intro-quenya-ch-6/</a></li>
+<li><b>Chapter 7 Drills</b> - <a href="https://community-courses.memrise.com/community/course/6353711/eldamo-intro-quenya-ch-7/">https://community-courses.memrise.com/community/course/6353711/eldamo-intro-quenya-ch-7/</a></li>
+<li><b>Chapter 8 Drills</b> - <a href="https://community-courses.memrise.com/community/course/6357574/eldamo-intro-quenya-ch-8/">https://community-courses.memrise.com/community/course/6357574/eldamo-intro-quenya-ch-8/</a></li>
+<li><b>Chapter 9 Drills</b> - <a href="https://community-courses.memrise.com/community/course/6358068/eldamo-intro-quenya-ch-9/">https://community-courses.memrise.com/community/course/6358068/eldamo-intro-quenya-ch-9/</a></li>
+<li><b>Chapter 10 Drills</b> - <a href="https://community-courses.memrise.com/community/course/6361771/eldamo-intro-quenya-ch-10/">https://community-courses.memrise.com/community/course/6361771/eldamo-intro-quenya-ch-10/</a></li>
+<li><b>Chapter 11 Drills</b> - <a href="https://community-courses.memrise.com/community/course/6366933/eldamo-intro-quenya-ch-11/">https://community-courses.memrise.com/community/course/6366933/eldamo-intro-quenya-ch-11/</a></li>
 </ul>
 
 </body>
