--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-06.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-06.html
@@ -123,7 +123,7 @@
 <li>With two-syllable prepositions like <i>ara</i> “beside”: <i>ar’ i mindon</i> “beside the tower”.</li>
 <li>With an uninflected aorist verb preceding the definite article <i>i</i>: <i>i atan mat’ i massa</i> “the man eats the bread”.</li>
 <li>With the directional suffixes <i>-nna</i>, <i>-llo</i> and <i>-sse</i>: <i>márenn’ alassëo</i> “to the home of happiness”.</li>
-<li>With long adjectives preceding the noun they modify: <i>vanim’ ambarónë</i> “a beautiful dawn”.</li>
+<li>With long adjectives preceding the noun they modify: <i>vanim’ atan</i> “a beautiful man”.</li>
 </ul>
 
 <p><span class="advanced-topic">Speculative:</span> For the last two cases, elision seem to be most likely in longer words if the result does not put the stressed syllables of the two words next to each other: <i>márENN’ aLASsëo</i> and <i>VAnim’ ambaRÓnë</i> are fine, but <i>hrestann’ ailino</i> is problematic because the two stressed syllables would be adjacent: <i>hrestANN’ AIlino</i>. In such cases I think elision is unlikely: <i>hrestanna ailino</i> “to the shore of a lake”. But <i>hrestann’ ailinyo</i> (<i>hrestANN’ aiLINyo</i>) “to the shore of his lake” is more likely to have elision because the stress patterns are amenable to it.</p>
@@ -289,7 +289,7 @@
 <li>Two-syllable prepositions like <i>ara</i> “beside”: <i>ar’ i mindon</i> “beside the tower”.</li>
 <li>An uninflected aorist verb preceding the definite article <i>i</i>: <i>i atan mat’ i massa</i> “the man eats the bread”.</li>
 <li>The directional suffixes <i>-nna</i>, <i>-llo</i> and <i>-sse</i>: <i>márenn’ alassëo</i> “to the home of happiness”.</li>
-<li>Long adjectives preceding the noun they modify: <i>vanim’ ambarónë</i> “a beautiful dawn”.</li>
+<li>Long adjectives preceding the noun they modify: <i>vanim’ atan</i> “a beautiful man”.</li>
 </ul></li>
 <li><b>Final syllable reductions:</b> Long vowels in final syllables can be shortened when:
 <ul>
@@ -1529,7 +1529,7 @@ and of the One who is above all thrones for ever.
 <li>Two-syllable prepositions like <i>ara</i> “beside”: <i>ar’ i mindon</i> “beside the tower”.</li>
 <li>An uninflected aorist verb preceding the definite article <i>i</i>: <i>i atan mat’ i massa</i> “the man eats the bread”.</li>
 <li>The directional suffixes <i>-nna</i>, <i>-llo</i> and <i>-sse</i>: <i>márenn’ alassëo</i> “to the home of happiness”.</li>
-<li>Long adjectives preceding the noun they modify: <i>vanim’ ambarónë</i> “a beautiful dawn”.</li>
+<li>Long adjectives preceding the noun they modify: <i>vanim’ atan</i> “a beautiful man”.</li>
 </ul></li>
 <li><b>Final syllable reductions:</b> Long vowels in final syllables can be shortened when:
 <ul>
