--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-12.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-12.html
@@ -165,7 +165,7 @@
 <li>Two-syllable prepositions like <i>ara</i> “beside”: <i>ar’ i mindon</i> “beside the tower”.</li>
 <li>An uninflected aorist verb preceding the definite article <i>i</i>: <i>i atan mat’ i massa</i> “the man eats the bread”.</li>
 <li>The directional suffixes <i>-nna</i>, <i>-llo</i> and <i>-sse</i>: <i>márenn’ alassëo</i> “to the home of happiness”.</li>
-<li>Long adjectives preceding the noun they modify: <i>vanim’ ambarónë</i> “a beautiful dawn”.</li>
+<li>Long adjectives preceding the noun they modify: <i>vanim’ atan</i> “a beautiful man”.</li>
 </ul></li>
 <li><b>Final syllable reductions:</b> Long vowels in final syllables can be shortened when:
 <ul>
