--- a/src/main/webapp/general/version-history.html
+++ b/src/main/webapp/general/version-history.html
@@ -10,7 +10,11 @@
 <p>[<a href="../index.html">Home</a>]</p>
 <hr>
 <h1>Version History</h1>
-<p>v0.8.9.1</p>
+<p>v0.8.9.2</p>
+<ul>
+<li>Finished dictionary entries for semantic category 9 = Physical Acts and Materials.</li>
+</ul>
+<p>v0.8.9.1 (March 17, 2024)</p>
 <ul>
 <li>Caught up on the backlog of neologisms missing from v0.8.9.</li>
 </ul>
