--- a/src/main/webapp/elvish-composition-archive/index.html
+++ b/src/main/webapp/elvish-composition-archive/index.html
@@ -8,7 +8,7 @@
 
 <h1>Elvish Composition Archive</h1>
 
-<p>Version 0.1.8 - Mar 4, 2024</p>
+<p>Version 0.1.9 - May 25, 2024</p>
 
 <p>This web page and its content are a mirror of the <i>Elvish Composition Archive</i>: a collection of works in Tolkien’s Elvish languages, Quenya and Sindarin. Content is organized alphabetically by <a href="#authors">author</a>. If you want to get (or even host) your own copy of the archive, see the section on <a href="#licensing">mirrors, downloads and licensing</a>. If you want to contribute to the archive, see the section on <a href="#submissions">submissions</a>.</p>
 
@@ -51,6 +51,7 @@
 <li><a href="luinyelle/a-lirulin.html">A Lirulin</a> (Quenya, 2022)</li>
 <li><a href="luinyelle/i-korko.html">i Korko</a> (Quenya, 2023)</li>
 <li><a href="luinyelle/feanaron-pataka-vinya.html">Feanáron Pataka Vinya</a> (Quenya, 2023)</li>
+<li><a href="luinyelle/i-elenwende.html">i Elenwendë</a> (Quenya, 2024)</li>
 </ul>
 
 <h3><a id="vyacheslav-stepanov"></a>Vyacheslav Stepanov</h3>
