--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-01.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-01.html
@@ -1366,7 +1366,7 @@ Star (is shining) hour-to meeting-our-of
 </ol>
 
 <ul>
-<li>Note ¹: This phrase uses <i>menel</i> and not <i>i menel</i> because unlike English (“the sky”), Quenya does not use the definite article (<i>i</i> = “the”) for unique things..</li>
+<li>Note ¹: This phrase uses <i>menel</i> and not <i>i menel</i> because unlike English (“the sky”), Quenya does not use the definite article (<i>i</i> = “the”) for unique things.</li>
 </ul>
 
 <p>Tengwar answers:</p>
