--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-02.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-02.html
@@ -161,7 +161,7 @@
 <p><a id="c2-1-2-1"></a><b>2.1.2.1 Quenya Diphthongs:</b> Quenya has six diphthongs, three <i>i</i>-diphthongs <i>ai, oi, ui</i> and three <i>u</i>-diphthongs <i>iu, eu, au</i>. All of these are blends of the relevant individual vowels: “AHee”, “OHee”, “OOee”; “eeOO”, “EHoo”, “AHoo”. Here are some English sounds that approximate these diphthongs:</p>
 
 <ul>
-<li><i>ai</i> = an “eye” sound as in English “eye” or “rye”. It is thus pronounced like the English “long i”  (“fight“, “pie” or “bite”) and <u>not</u> like the English “long a” (“fate”, “pay” or “bait”), which you might be tempted to use.</li>
+<li><i>ai</i> = an “eye” sound as in English “eye” or “rye”. It is thus pronounced like the English “long i”  (“fight”, “pie” or “bite”) and <u>not</u> like the English “long a” (“fate”, “pay” or “bait”), which you might be tempted to use.</li>
 <li><i>oi</i> = an “oy” sound as in “boy”, “coin” or “choice”. An English speaker’s intuition is generally correct with this diphthong.</li>
 <li><i>ui</i> = a “wee” sound [roughly] similar to English “queen” or “linguine”, but as a [blended] falling diphthong  “OOee” with the emphasis on the first part, not a rising diphthong “ooEE”. Another possible example is English “ruin”, if you pronounce that word as one syllable instead of two.</li>
 <li><i>iu</i> = a “yoo” sound as in “yule” or “music”. This is actually a rising diphthong in Quenya of the Third Age: “eeOO”. In classical Quenya pronunciation, it was falling “EEoo” like other Quenya diphthongs.</li>
@@ -415,7 +415,7 @@
 <li>Starting with this chapter, we are going to include the past tense (<i>pa.t.</i>) in all vocabulary entries for verbs. Quenya past tenses can be quite irregular, and it is best for beginners to just memorize their forms. This will be discussed further in <a href="#c2-2-4">Section 2.2.4 Introduction to the Past Tense</a>.</li>
 <li>This vocabulary list includes various “reliability markers” that indicate the level of knowledge about a particular word, inflected form or English translation.
 <ul>
-<li>Unmarked items are attested, which mean they appear somewhere in Tolkien’s writing.</li>
+<li>Unmarked items are attested, which means they appear somewhere in Tolkien’s writing.</li>
 <li># items only appear in an inflected form, with the base word extracted from that inflection.</li>
 <li>* items do not appear directly, but are deducible from other forms or the grammar of the language.</li>
 <li>^ items are adapted from rejected or earlier forms of the language.</li>
@@ -902,7 +902,7 @@
 <li><b><a href="#c2-3-2-4">2.3.2.4 Locational Expressions</a></b></li>
 </ul>
 
-<p><a id="c2-3-2-1"></a><b>2.3.2.1 Usage of <i>ëa-</i></b> The closest equivalent to the verb <i>ëa-</i> in English is “to exist”. The Quenya word for the universe (all of existence) is the closely related word <i>Eä</i> (S/20; Let/286). Tolkien specified that the verb <i>ëa-</i> meant “exist (have being in primary world of history)” and that it was “not followed by any adj. or noun but only by a[n] adverb (or negated adverb) mainly of time” (PE22/147). In other words, the verb <i>ëa-</i> cannot be used to equate two nouns or a noun and an adjective; that’s what <i>ná-</i> is for. The verb <i>ëa-</i> can only be followed by adverbs and prepositional expressions. Compare:</p>
+<p><a id="c2-3-2-1"></a><b>2.3.2.1 Usage of <i>ëa-</i></b> The closest equivalent to the verb <i>ëa-</i> in English is “to exist”. The closely related word <i>Eä</i> is the Quenya word for the universe = all of existence (S/20; Let/286). Tolkien specified that the verb <i>ëa-</i> meant “exist (have being in primary world of history)” and that it was “not followed by any adj. or noun but only by a[n] adverb (or negated adverb) mainly of time” (PE22/147). In other words, the verb <i>ëa-</i> cannot be used to equate two nouns or a noun and an adjective; that’s what <i>ná-</i> is for. The verb <i>ëa-</i> can only be followed by adverbs and prepositional expressions. Compare:</p>
 
 <ul>
 <li><i>Elerondo nánë elda</i> “Elrond was an Elf”.</li>
@@ -927,10 +927,10 @@
 <div class="advanced-topic">
 <p><a id="c2-3-2-3"></a><b>2.3.2.3 How do we know this?</b> Tolkien outlined the distinction between <i>ëa-</i> “exist” (from the root EÑE) and <i>ná-</i> “be” (from the root NĀ) in <i>Late Notes on Verb Structure</i> written in 1969 (PE22/147). The most complete conjugation of <i>ëa-</i> appears in another note from 1969, where Tolkien specified that it used the same form for the aorist and the present (VT49/29). This 1969 conjugation is presented in the section above.</p>
 
-<p>Note that in some of Tolkien’s earlier writings, he used <i>ëa</i> instead of <i>ná</i> as the basic “to be” verb, most notably in the <i>Quenya Verbal System</i> (QVS) written in 1948 (PE22/122-124). Some of the ideas presented in this 1948 document remain applicable to Quenya, but with <i>ëa</i> updated to <i>ná</i>. In particular, there is an interesting discussion on how Quenya handles locational expressions that still remains relevant (PE22/125-126). It is summarized in the following section but (a) with <i>ëa</i> revised to <i>ná</i> and (b) some of the locational verbs updated to later forms, as discussed in the section section <a href="#c2-2-5-2">2.2.5.2 Verbs of Location</a>.</p>
+<p>Note that in some of Tolkien’s earlier writings, he used <i>ëa</i> instead of <i>ná</i> as the basic “to be” verb, most notably in the <i>Quenya Verbal System</i> (QVS) written in 1948 (PE22/122-124). Some of the ideas presented in this 1948 document remain applicable to Quenya, but with <i>ëa</i> updated to <i>ná</i>. In particular, there is an interesting discussion on how Quenya handles locational expressions that still remains relevant (PE22/125-126). It is summarized in the following section but (a) with <i>ëa</i> revised to <i>ná</i> and (b) some of the locational verbs updated to later forms, as discussed in the section <a href="#c2-2-5-2">2.2.5.2 Verbs of Location</a>.</p>
 </div>
 
-<p><a id="c2-3-2-4"></a><b>2.3.2.4 Locational Expressions:</b> English frequently uses “be” in expressions of location, but it seems Quenya rarely does so. The verb <i>ná</i> is generally omitted as is often the case, with the usual exceptions for inflected forms, such as <i>tanomë i osto</i> “there [is] the city” (PE22/124) versus <i>tanomë nauvan</i> “I will be there” (VT49/19). Omitting <i>ná</i> may also be possible with prepositional expressions or a directional noun cases (<i>-nna, -llo, -ssë</i>):</p>
+<p><a id="c2-3-2-4"></a><b>2.3.2.4 Locational Expressions:</b> English frequently uses “be” in expressions of location, but it seems Quenya rarely does so. The verb <i>ná</i> is generally omitted as is often the case, with the usual exceptions for inflected forms, such as <i>tanomë i osto</i> “there [is] the city” (PE22/124) versus <i>tanomë nauvan</i> “I will be there” (VT49/19). Omitting <i>ná</i> may also be possible with prepositional expressions or directional noun cases (<i>-nna, -llo, -ssë</i>):</p>
 
 <ul>
 <li><i>Elerondo Endoressë</i> “Elrond [is] in Middle-earth”.</li>
@@ -1083,7 +1083,7 @@
 <li><i>periandi</i> - “pehr.ee.AHN.dee”</li>
 <li><i>tiuca</i> - “TYOO.kah”</li>
 <li><i>raica</i> - “REYE.kah”</li>
-<li><i>tauressë</i> - “tow.REHS.seh” [like “how” not “toe”]</li>
+<li><i>tauressë</i> - “tow.REHS.seh” [“tow” pronounced like “how” not “toe”]</li>
 </ol>
 
 <p>Translate the following into English:</p>
@@ -1197,7 +1197,7 @@
 <p><a id="c2-4-1-2"></a><b>2.4.1.2 Reliability Markers:</b> The past tense ^<i>handë</i> of <i>har-</i> in the example above includes a reliability marker, which indicates our level of knowledge for a given item. The reliability markers used in this course are as follows:</p>
 
 <ul>
-<li>Unmarked items are attested, which mean they appear somewhere in Tolkien’s writing.</li>
+<li>Unmarked items are attested, which means they appear somewhere in Tolkien’s writing.</li>
 <li># items only appear in an inflected form, with the base word extracted from that inflection.</li>
 <li>* items do not appear directly, but are deducible from other forms or the grammar of the language.</li>
 <li>^ items are adapted from rejected or earlier forms of the language.</li>
@@ -1235,7 +1235,7 @@
 
 <p>Sometimes, though, the sound losses were in the inflected forms. An example of this is <i>soron</i> (<i>sorn-</i>) “eagle”, where the second <i>o</i> was preserved in the simplex (<i>soron</i>) but was lost when inflections were added: <i>sorni</i> “eagles”. In such cases, the stem is shorter than the simplex.</p>
 
-<p><a id="c2-4-2-2"></a><b>2.4.2.2 Verb Stems:</b> Verbs are different from nouns in that the vocabulary entries show the stem form rather than the simplex: <i>mat-</i> “to eat”. The verb stem is the basis for the verbs conjugations into tenses (aorist, present, future, past, perfect), but verbs can only be used in a conjugated form: <i>matë, máta, matuva, mantë, amátië</i> “eats, is eating, will eat, ate, has eaten”. In a sense, each of these tense-forms is itself a stem, to which further suffixes like pronominal inflections are added, e.g. <i>máta</i> “is eating”, <i>mátan</i> “I am eating” (<i>máta-n</i>).</p>
+<p><a id="c2-4-2-2"></a><b>2.4.2.2 Verb Stems:</b> Verbs are different from nouns in that the vocabulary entries show the stem form rather than the simplex: <i>mat-</i> “to eat”. The verb stem is the basis for the verb’s conjugations into tenses (aorist, present, future, past, perfect), but verbs can only be used in a conjugated form: <i>matë, máta, matuva, mantë, amátië</i> “eats, is eating, will eat, ate, has eaten”. In a sense, each of these tense-forms is itself a stem, to which further suffixes like pronominal inflections are added, e.g. <i>máta</i> “is eating”, <i>mátan</i> “I am eating” (<i>máta-n</i>).</p>
 
 <p>Just as some nouns have distinct stem forms, the aorist stem of basic verbs has a different form in the simplex (<i>matë</i>) as opposed to when it is inflected (<i>mati-</i>). It is the same basic phenomenon at play, where an ancient <i>i</i> changed to <i>ë</i> in the simplex but was retained with inflections: <i>matin</i> “I eat” (<i>mati-n</i>).</p>
 
@@ -1367,7 +1367,7 @@
 
 <p>In times of peace most Elves married soon after they reached adulthood. Elves might meet and choose their romantic partner or “lover” (<i>melindo</i> or <i>melissë</i>) even as children, but the “lovers” needed to be adults before their families would allow a marriage. Betrothal involved the exchange of rings of silver, and the assent of both parties was required. Betrothals lasted at least a year, and could sometimes be (much) longer. If the feelings were not shared or were altered over time, the betrothal could be broken by one party returning the ring (which was melted and not reused for other engagements).</p>
 
-<p>Most betrothals were not broken, and the day of marriage was usually a feast involving both families and the rest of the community. The father of the groom gave a gift to the bride and the mother of the bride gave a gift to the groom. The silver rings of engagement were replaced by golden rings of marriage, exchanged anew between bride and groom, and the engagement rings were returned to become a private treasures of each spouse. The ceremony involved requests for the blessings by Manwë and Varda, as well as an invocation of Eru (who was otherwise mentioned only rarely in Elvish rituals).</p>
+<p>Most betrothals were not broken, and the day of marriage was usually a feast involving both families and the rest of the community. The father of the groom gave a gift to the bride and the mother of the bride gave a gift to the groom. The silver rings of engagement were replaced by golden rings of marriage, exchanged anew between bride and groom, and the engagement rings were returned to become private treasures of each spouse. The ceremony involved requests for the blessings by Manwë and Varda, as well as an invocation of Eru (who was otherwise mentioned only rarely in Elvish rituals).</p>
 
 <p>However, it was not this ceremony that “sealed” the marriage, but rather the first act of procreation between the spouses. This sexual union of <i>yermë</i> also sealed and strengthened the <i>melmë</i> between them into a permanent bond. In circumstances of isolation two Elves could “marry each other” through this act of <i>yermë</i> without the trappings of ceremony, and such marriages were as legitimate and permanent as the more formal ones. In ordinary circumstances, a period of child rearing followed soon after marriage.</p>
 
@@ -1479,7 +1479,7 @@
 
 <h1><a id="c2-6"></a>2.6 Guided Reading: Elendil’s Oath</h1>
 
-<p>It’s time for some more analysis of Tolkien’s own writing, this time Elendil’s Oath, which he proclaimed after his arrival in Middle-earth, an oath that was renewed by Aragorn after the War of the Ring (<i>The Lord of the Rings</i>, Book 6, Chapter 5: The Steward and the King). First a bit of new vocabulary:</p>
+<p>It’s time for some more analysis of Tolkien’s own writing, this time Elendil’s Oath, which Elendil proclaimed after his arrival in Middle-earth, an oath that was renewed by Aragorn after the War of the Ring (<i>The Lord of the Rings</i>, Book 6, Chapter 5: The Steward and the King). First a bit of new vocabulary:</p>
 
 <ul class="vocab-list">
 <li><b>sinomë</b> <i>adv.</i> “here”</li>
