--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-15.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-15.html
@@ -559,7 +559,7 @@
 <li><i>I atano sercë carnë.</i></li>
 <li><i>Calmar cálar laurië i ostossë.</i></li>
 <li><i>Cenin varni leperi máryo.</i></li>
-<li><i>Mornë homi orquion serir amborintassen.</i></li>
+<li><i>Mornë homi orquion serir amborintassë.</i></li>
 </ol>
 
 <ul>
