--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-04.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-04.html
@@ -863,7 +863,7 @@ Red tehta don’t work in safari
 <li><i>I atano sercë carnë.</i></li>
 <li><i>Calmar cálar laurië i ostossë.</i></li>
 <li><i>Cenin varni leperi máryo.</i></li>
-<li><i>Mornë homi orquion serir amborintassen.</i></li>
+<li><i>Mornë homi orquion serir amborintassë.</i></li>
 </ol>
 
 <ul>
@@ -1952,7 +1952,7 @@ like gulls wailing?
 <li>The man’s blood [is] red.</li>
 <li>Lamps are shining golden[ly] in the city.</li>
 <li>I see [the] brown fingers of his/her hand.</li>
-<li>[The] black hearts of orcs rest in their chests.</li>
+<li>[The] black hearts of orcs rest in their chest.</li>
 </ol>
 
 <ol class="exercise-list" start="7">
