--- a/src/main/webapp/general/version-history.html
+++ b/src/main/webapp/general/version-history.html
@@ -10,7 +10,11 @@
 <p>[<a href="../index.html">Home</a>]</p>
 <hr>
 <h1>Version History</h1>
-<p>v0.8.10</p>
+<p>v0.8.10.1</p>
+<ul>
+<li>Finished Dictionary entries for semantic category 10 = Motion and Transportation.</li>
+</ul>
+<p>v0.8.10 (August 4, 2024)</p>
 <ul>
 <li>Dictionary entries for first half of semantic category 10 = Motion and Transportation.</li>
 </ul>
