--- a/src/main/webapp/elvish-composition-archive/index.html
+++ b/src/main/webapp/elvish-composition-archive/index.html
@@ -8,7 +8,7 @@
 
 <h1>Elvish Composition Archive</h1>
 
-<p>Version 0.1.9 - May 25, 2024</p>
+<p>Version 0.2.2 - Dec 18, 2024</p>
 
 <p>This web page and its content are a mirror of the <i>Elvish Composition Archive</i>: a collection of works in Tolkien’s Elvish languages, Quenya and Sindarin. Content is organized alphabetically by <a href="#authors">author</a>. If you want to get (or even host) your own copy of the archive, see the section on <a href="#licensing">mirrors, downloads and licensing</a>. If you want to contribute to the archive, see the section on <a href="#submissions">submissions</a>.</p>
 
@@ -17,25 +17,50 @@
 <p>Each author’s compositions are organized in chronological order of composition, with an indication of which Elvish language(s) they use. Note that the date of composition may not reflect when the composition was added to the archive. Because the works here are the writings of multiple authors, they do not necessarily represent a common vision of the Elvish languages, or the vision of Tolkien himself.</p>
 
 <ul>
+<li><a href="#almariel">Almáriel</a></li>
 <li><a href="#chaered">Chaered</a></li>
 <li><a href="#delle">Delle</a></li>
+<li><a href="#echuidor">Echuidor</a></li>
 <li><a href="#ellanto">Ellanto</a></li>
 <li><a href="#luinyelle">Luinyelle</a></li>
+<li><a href="#rinor">Rínor</a></li>
 <li><a href="#vyacheslav-stepanov">Vyacheslav Stepanov</a></li>
+</ul>
+
+<h3><a id="almariel"></a>Almáriel</h3>
+
+<ul>
+<li><a href="almariel/soldier-poet-king.html">Soldier, Poet, King</a> (Quenya, 2024)</li>
+<li><a href="almariel/i-carma-tecindova.html">I Carma Tecindova</a> (Quenya, 2024)</li>
+</ul>
+
+<h3><a id="rinor"></a>Rínor</h3>
+
+<ul>
+<li><a href="rinor/celebrinor.html">Celebrinor</a> (Sindarin, 2024)</li>
 </ul>
 
 <h3><a id="chaered"></a>Chaered</h3>
 
 <ul>
 <li><a href="chaered/tengwa-abc.html">Tengwar ABC</a> (Quenya, 2023)</li>
+<li><a href="chaered/a-pamba.html">Á Pamba</a> (Quenya, 2024)</li>
 <li><a href="chaered/gloomy-march.html">Gloomy March</a> (Quenya, 2024)</li>
 <li><a href="chaered/ninya-masta.html">Ninya Masta</a> (Quenya, 2024)</li>
+<li><a href="chaered/boy-vs-orc.html">Boy vs. Orc</a> (Quenya, 2024)</li>
+<li><a href="chaered/vanwa-vayan.html">Vanwa Váyan</a> (Quenya, 2024)</li>
 </ul>
 
 <h3><a id="delle"></a>Delle</h3>
 
 <ul>
 <li><a href="delle/nyare-pa-i-corco.html">Nyare Pá i Corco</a> (Quenya, 2023)</li>
+</ul>
+
+<h3><a id="echuidor"></a>Echuidor</h3>
+
+<ul>
+<li><a href="echuidor/ring-verse-sindarin.html">Ring Verse (Sindarin)</a> (Sindarin, 2024)</li>
 </ul>
 
 <h3><a id="ellanto"></a>Ellanto</h3>
@@ -52,6 +77,8 @@
 <li><a href="luinyelle/i-korko.html">i Korko</a> (Quenya, 2023)</li>
 <li><a href="luinyelle/feanaron-pataka-vinya.html">Feanáron Pataka Vinya</a> (Quenya, 2023)</li>
 <li><a href="luinyelle/i-elenwende.html">i Elenwendë</a> (Quenya, 2024)</li>
+<li><a href="luinyelle/sanwe-luite-sinyeo.html">Sanwe Luite Þinyeo</a> (Quenya, 2024)</li>
+<li><a href="luinyelle/tirion-ninquisseo.html">Tirion Ninquisseo</a> (Quenya, 2024)</li>
 </ul>
 
 <h3><a id="vyacheslav-stepanov"></a>Vyacheslav Stepanov</h3>
