--- a/src/main/webapp/general/terminology-and-notations.html
+++ b/src/main/webapp/general/terminology-and-notations.html
@@ -57,7 +57,7 @@
 <p><a name="reliability-markers"></a><b>Reliability Markers</b></p>
 <ul>
 <li>Words directly attested in Tolkien’s writing are unmarked and followed by a reference (Abbr/Page)</li>
-<li># marks words that can derived from attested words via grammatical rules or as elements of compounds</li>
+<li># marks words that can be derived from attested words via grammatical rules or as elements of compounds</li>
 <li>* marks words that are reconstructed but can be reasonably deduced by comparison to other words</li>
 <li>^ marks words that are reformulated from early versions of the languages to fit the structure of later languages</li>
 <li>? marks words that are more speculative, but still deduced from original source material</li>
