--- a/src/main/webapp/general/version-history.html
+++ b/src/main/webapp/general/version-history.html
@@ -10,7 +10,11 @@
 <p>[<a href="../index.html">Home</a>]</p>
 <hr>
 <h1>Version History</h1>
-<p>v0.8.10.1</p>
+<p>v0.8.10.23</p>
+<ul>
+<li>Basic data entry for PE23. This release does <u>not</u> revise the Eldamo grammar and phonological analysis to reflect the new information. Further analysis will come in future releases, and there are various XXX markers in this release that are placeholders indicating where things need to be revised.</li>
+</ul>
+<p>v0.8.10.1 (September 22, 2024)</p>
 <ul>
 <li>Finished Dictionary entries for semantic category 10 = Motion and Transportation.</li>
 </ul>
