--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-14.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-14.html
@@ -197,7 +197,7 @@
 <li>“candle” <i>n.</i> <b>lícuma</b></li>
 <li>“canopy” <i>n.</i> <b>telumë</b></li>
 <li>“captain” <i>n.</i> <b>hesto</b></li>
-<li>“care (have care for)” <i>v.</i> !<b>nil-</b><ul><li>“cared for” <i>pa.t.</i> !<b>nillë</b></li></ul></li>
+<li>“care (have care for)” <i>v.</i> <b>nil-</b><ul><li>“cared for” <i>pa.t.</i> !<b>nillë</b></li></ul></li>
 <li>“carry” <i>v.</i> <b>col-</b><ul><li>“carried” <i>pa.t.</i> *<b>collë</b></li></ul></li>
 <li>“cat” <i>n.</i> <b>miuë</b> (<b>miuy-</b>)</li>
 <li>“cause” <i>v.</i> <b>tyar-</b><ul><li>“caused” <i>pa.t.</i> *<b>tyarnë</b></li></ul></li>
@@ -515,7 +515,7 @@
 <li>“hate” <i>v.</i> ^<b>tev-</b><ul><li>“hated” <i>pa.t.</i> ^<b>tévë</b></li></ul></li>
 <li>“have” <i>v.</i> <b>sam-</b><ul><li>“had” <i>pa.t.</i> <b>sámë</b></li></ul></li>
 <li>“have a chance to” <i>v.</i> <b>ec-</b><ul><li>“had a chance to” <i>pa.t.</i> *<b>encë</b></li></ul></li>
-<li>“have care for” <i>v.</i> !<b>nil-</b></li>
+<li>“have care for” <i>v.</i> <b>nil-</b></li>
 <li>“haven” <i>n.</i> <b>londë</b></li>
 <li>“he” <i>suf.</i> <b>-ssë</b></li>
 <li>“he (emphatic)” <i>pron.</i> <b>issë</b></li>
