--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-02.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-02.html
@@ -1399,7 +1399,7 @@
 <li><b>melindo</b> <i>n.</i> “lover (m.)”</li>
 <li><b>melissë</b> <i>n.</i> “lover (f.)”</li>
 <li><b>melmë</b> <i>n.</i> “love”</li>
-<li>!<b>nil-</b> <i>v.</i> “to love, have care for” ²
+<li><b>nil-</b> <i>v.</i> “to love, *have care for”
 <ul><li><i>pa.t.</i> !<b>nillë</b> “loved, cared for”</li></ul></li>
 <li><b>nilmë</b> <i>n.</i> “friendship”</li>
 <li><b>nildë</b> <i>n.</i> “[casual] friend (f.)”</li>
@@ -1435,13 +1435,13 @@
 
 <ul>
 <li>Note ¹: Quenya distinguishes legitimate sexual desire <i>yermë</i> (which is always accompanied by <i>melmë</i> “love”) from illegitimate sexual desire or “lust” <i>mailë</i>.</li>
-<li>Note ²: The Elvish notion of “love” distinguishes close emotional love (<i>mel-</i>) used with both lovers and close friends, and less emotional “love” (!<i>nil-</i>) used of more casual friends as well as things one is devoted to such as an art, science or nation. In his own writing, Tolkien did not use <i>nil-</i> as a Quenya verb, so strictly speaking this is a neologism, though Tolkien often gave its ancient root √<i>NDIL</i> this verbal sense (Let/386; PE17/152).</li>
+<li>Note ²: The Elvish notion of “love” distinguishes close emotional love (<i>mel-</i>) used with both lovers and close friends, and less emotional “love” (<i>nil-</i>) used of things one is devoted to such as an art, science or nation.</li>
 <li>Note ³: Tolkien translated the Elvish word <i>nos(së)</i> as “family”, and it is often used as such in (Neo) Quenya writing, but Tolkien also translated it as “clan, kindred”, indicating it more specifically means an “extended family” or even a “house” as in <i>nossë Finwëo</i> “the house of Finwë” including all his descendents. For a “nuclear family” (father, mother and children) I personally use the neologism !<i>orendë</i>, inspired by Tolkien’s word ᴱQ. <i>soresta</i> “family = together kin” from the 1910s (PE12/85).</li>
 </ul>
 
-<p>The words !<i>nil-</i> and !<i>orendë</i> are our first examples of neologisms in this course: new Elvish words invented by fans (only one of which, <i>orendë</i>, is the invention of the course’s author). The exclamation mark “!” before vocabulary words indicates they are neologisms. This particular pair of neologisms is included here because we know that the contrasting words <i>mel-</i> (“to love deeply and emotionally”) and <i>nossë</i> (“extended family”) had particular meanings in Tolkien’s writings, but we don’t know the Quenya words for the opposing terms (“to love less emotionally” and “nuclear family”).</p>
+<p>The word !<i>orendë</i> is our first example of a neologism in this course: new Elvish words invented by fans (in this case the invention of the course’s author). The exclamation mark “!” before vocabulary words indicates they are neologisms. This particular neologism is included here because we know that the contrasting word <i>nossë</i> (“extended family”) had particular meanings in Tolkien’s writings, but we don’t know the Quenya words for the opposing term (“nuclear family”).</p>
 
-<p>Because they are neologisms, these words are not universally accepted among writers of Quenya and won’t be used in exercises, but they are helpful for purposes of discussion, and I personally would use both of them for Quenya writing in less formal settings. A discussion of Neo-Quenya appears in the (optional) section later in this chapter: <a href="#c2-7">2.7 Advanced Topic: Conceptual Development of Quenya</a>.</p>
+<p>Neologisms are always not universally accepted among writers of Quenya and won’t be used in exercises, but they are helpful for purposes of discussion, and I personally would use <i>orendë</i> for Quenya writing in less formal settings. A discussion of Neo-Quenya appears in the (optional) section later in this chapter: <a href="#c2-7">2.7 Advanced Topic: Conceptual Development of Quenya</a>.</p>
 
 <h2><a id="x2-5"></a>Exercise 2.5</h2>
 
@@ -1568,7 +1568,7 @@ In this place will I abide, and my heirs, unto the ending of the world.
 
 <p>That is especially the case when presenting Quenya to relative beginners, as this course aims to do. To avoid this issue, most Quenya courses (including this one) present a simplified version of the Elvish languages to make it easier for students to grasp. Such “post-Tolkien” renditions of Elvish are usually referred to as Neo-Quenya, and they gloss over the messier details and contradictions of the source material. You can’t reasonably expect the student to grasp the complexity of sixty years of worth of evolution for Tolkien’s languages when they are still wrestling with basic grammar.</p>
 
-<p><a id="c2-7-5"></a><b>2.7.5 More on Neologisms:</b> One common feature of Neo-Quenya is the use of neologisms, or fan-invented words that “fill in the gaps” of the Elvish languages as described by Tolkien. Not every neologism represents a new concept. For example, we don’t know the past tense of every Quenya verb and sometimes we need to guess, such as assuming the past tense of <i>mar-</i> “to dwell” is *<i>marnë</i> “dwelled”. Strictly speaking these are neologisms as well. However, when most people think of neologisms, they think of words that add new concepts to the Elvish languages, such !<i>nil-</i> “to love (less emotionally)” or !<i>orendë</i> “nuclear family”.</p>
+<p><a id="c2-7-5"></a><b>2.7.5 More on Neologisms:</b> One common feature of Neo-Quenya is the use of neologisms, or fan-invented words that “fill in the gaps” of the Elvish languages as described by Tolkien. Not every neologism represents a new concept. For example, we don’t know the past tense of every Quenya verb and sometimes we need to guess, such as assuming the past tense of <i>mar-</i> “to dwell” is *<i>marnë</i> “dwelled”. Strictly speaking these are neologisms as well. However, when most people think of neologisms, they think of words that add new concepts to the Elvish languages, such as !<i>orendë</i> “nuclear family”.</p>
 
 <p>The exercises in this course avoid using neologisms, but not because neologisms are inherently bad. A lot of new students have a strong desire to “use only words that Tolkien used”, but the reality is that it is only a matter of time before you run into something that Tolkien didn’t have a word for, especially if you want to talk about modern things like computers or automobiles. At that point your choices are (a) don’t say anything at all, (b) use some complex circumlocution to get around the missing word or (c) coin some neologism. However, different people have varying levels of tolerance for neologisms (and different kinds of neologism), so you will likely see some disagreements on what is the best way of translating a particular phrase.</p>
 </div>
@@ -1773,7 +1773,7 @@ In this place will I abide, and my heirs, unto the ending of the world.
 <li><b>melindo</b> <i>n.</i> “lover (m.)”</li>
 <li><b>melissë</b> <i>n.</i> “lover (f.)”</li>
 <li><b>melmë</b> <i>n.</i> “love”</li>
-<li>!<b>nil-</b> <i>v.</i> “to love, have care for” ²
+<li><b>nil-</b> <i>v.</i> “to love, have care for” ²
 <ul><li><i>pa.t.</i> !<b>nillë</b> “loved, cared for”</li></ul></li>
 <li><b>nilmë</b> <i>n.</i> “friendship”</li>
 <li><b>nildë</b> <i>n.</i> “[casual] friend (f.)”</li>
@@ -1783,7 +1783,7 @@ In this place will I abide, and my heirs, unto the ending of the world.
 
 <ul>
 <li>Note ¹: Quenya distinguishes legitimate sexual desire <i>yermë</i> (which is always accompanied by <i>melmë</i> “love”) from illegitimate sexual desire or “lust” <i>mailë</i>.</li>
-<li>Note ²: The Elvish notion of “love” distinguishes close emotional love (<i>mel-</i>) used with both lovers and close friends, and less emotional “love” (!<i>nil-</i>) used of more casual friends as well as things one is devoted to such as an art, science or nation. In his own writing, Tolkien did not use <i>nil-</i> as a Quenya verb, so strictly speaking this is a neologism, though Tolkien often gave its ancient root √<i>NDIL</i> this verbal sense (Let/386; PE17/152).</li>
+<li>Note ²: The Elvish notion of “love” distinguishes close emotional love (<i>mel-</i>) used with both lovers and close friends, and less emotional “love” (<i>nil-</i>) used of things one is devoted to such as an art, science or nation.</li>
 </ul>
 
 <p><b><u>Family:</u></b></p>
